--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,11 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <!-- INTERNET ACCESS PERMISSION -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="7"
         android:targetSdkVersion="21" />
 
     <application
@@ -23,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".StartPage"
+            android:name=".AccountPage"
             android:label="@string/title_activity_start_page" >
         </activity>
     </application>
