--- a/.project
+++ b/.project
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>Shyer</name>
-	<comment></comment>
+	<comment>
+		
+	</comment>
 	<projects>
 	</projects>
 	<buildSpec>
